[workspace]
members = [
    "dex/bancor-v3-substreams",
    "dex/velodrome-substreams",
    "lending/inverse-finance-substreams",
    "staking/tokemak-substreams",
    "lending/compound-v3-substreams",
    "lending/liquity-substreams",
    "lending/maple-finance-v2-substreams",
    "lending/morpho-blue-substreams",
    "lending/yearn-v2-substreams",
    "nft/looksrare-substreams",
    "nft/seaport-substreams",
    "staking/suzaku-substreams",
    "staking/eigenlayer-substreams",
    "staking/etherfi-substreams",
    "staking/frax-ether-staking-substreams",
    "staking/rocket-pool-substreams",
    "nft/cryptopunks-substreams",
    "staking/lido-substreams",
    "staking/chainlink-staking-substreams",
    "staking/coinbase-wrapped-staked-eth-substreams",
    "staking/convex-finance-substreams",
    "staking/kelp-dao-substreams",
    "staking/stader-substreams",
    "staking/swell-liquid-staking-substreams",
    "staking/dinero-pxeth-substreams",
    "staking/origin-ether-substreams",
    "staking/prime-staked-eth-substreams",
    "staking/aspida-substreams",
    "staking/creth2-substreams",
    "staking/liquid-collective-substreams",
    "staking/kernel-protocol-substreams",
    "staking/hord-fi-substreams",
    "staking/deq-substreams",
    "staking/friend-tech-substreams",
    "staking/gaurda-staking-substreams",
    "staking/m0-power-substreams",
    "staking/superseed-substreams",
    "staking/aqua-patina-substreams",
    "staking/fx-protocol-substreams",
    "staking/gudchain-substreams",
    "staking/klimadao-substreams",
    "staking/matrixdock-substreams",
    "staking/paxos-gold-substreams",
    "staking/usual-substreams",
    "staking/yieldyak-staked-avax-substreams",
    "staking/bob-fusion-substreams",
    "staking/cygnus-finance-substreams",
    "staking/geode-substreams",
    "staking/mev-protocol-substreams",
    "staking/ora-protocol-substreams",
    "staking/stcelo-substreams",
    "staking/tensorplex-substreams",
    "staking/tether-gold-substreams",
    "staking/benqi-staked-avax-substreams",
    "staking/eigenpie-substreams",
    "staking/flat-money-substreams",
    "staking/mantle-staked-eth-substreams",
    "staking/slisbnb-substreams",
    "staking/inception-substreams",
    "staking/powh3d-substreams",
    "staking/hyperlock-finance-substreams",
    "staking/lybra-finance-substreams",
    "staking/stake-link-liquid-substreams",
    "staking/amphor-substreams",
    "staking/gogopool-substreams",
    "staking/rari-vaults-substreams",
    "staking/euler-finance-substreams",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
keywords = ["substreams", "wasm", "streamingfast"]
repository = "https://github.com/streamingfast/substreams-chain-modules"

[workspace.dependencies]
anyhow = "1"
ethabi = "18"
hex = "0.4"
hex-literal = "0.4"
num-bigint = "0.4"
prost = "0.13"
prost-types = "0.13"
substreams = "0.7"
substreams-database-change = "4"
substreams-ethereum = "0.11"
pretty_assertions = "1"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"
