[package]
name = "morpho_blue_substreams"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-database-change = { workspace = true }
prost = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
ethabi = { workspace = true }
num-bigint = { workspace = true }

[build-dependencies]
substreams-ethereum = { workspace = true }
