[package]
name = "yearn-v2-substreams"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
name = "yearn_v2_substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ethabi.workspace = true
hex.workspace = true
hex-literal.workspace = true
num-bigint.workspace = true
prost.workspace = true
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-database-change.workspace = true

[build-dependencies]
anyhow.workspace = true
substreams-ethereum.workspace = true
