[package]
name = "hyperlock-finance-substreams"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
name = "hyperlock_finance_substreams"

[dependencies]
ethabi.workspace = true
hex.workspace = true
hex-literal.workspace = true
num-bigint.workspace = true
prost.workspace = true
substreams.workspace = true
substreams-database-change.workspace = true
substreams-ethereum.workspace = true

[build-dependencies]
anyhow.workspace = true
substreams-ethereum.workspace = true
